--- a/style.css
+++ b/style.css
@@ -63,15 +63,15 @@ li {
 /*  Party view */
 #conservative, #labour, #libdem { padding: 10px; }
 #conservative {
-    background: rgba(0, 255, 0, 0.2);
+    background: rgb(0, 255, 0, 0.2);
     top: 110px;
 }
 #labour {
-    background: rgba(0, 255, 255, 0.2);
+    background: rgb(0, 255, 255, 0.2);
     top: 330px;
 }
 #libdem {
-    background: rgba(128, 0, 255, 0.2);
+    background: rgb(128, 0, 255, 0.2);
     top: 550px;
 }
 
