--- a/style.css
+++ b/style.css
@@ -152,13 +152,13 @@ circle.active {
     margin: 0.2em;
 }
 .lab {
-    fill: #F02233;
+    fill: #00FF00;
 }
 .lib {
-    fill: #FDBB30;
+    fill: #00FFFF;
 }
 .con {
-    fill: #087FBD;
+    fill: #8000FF;
 }
 .snp {
     fill: #C9C945;
